# GithubAgent

./: LICENSE  Readme.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/chat/: agent.py
backend/core/: agent_singleton.py  config.py  state.py
backend/db/: chat_db.py  repo_db.py
backend/diagram/: agent.py
backend/podcast/: agent.py
backend/routes/: __init__.py  chat.py  diagram.py  podcast.py  repo.py  setup.py  status.py
frontend/: index.html  package.json
frontend/src/: app.tsx  index.css
frontend/src/components/: chart.tsx  chatInputForm.tsx  header.tsx  loader.tsx
frontend/src/components/ui/: placeholder-and-vanish-input.tsx  textarea.tsx
frontend/src/libs/: ProtectedRoute.tsx  RepoContext.tsx
frontend/src/pages/: audio.tsx  chat.tsx  dashboard.tsx  fileTree.tsx  index.tsx
